tests/paczka2/big_fuzzy/24963833.err
Error in line 1: wpPJ S30 48,8
Error in line 7: 0iMt S00 69,8
Error in line 2: jupIYqLanq6 S30 79,8
Error in line 3: 3iMt S140 82,6
Error in line 15: bbCe S140 96,9
Error in line 19: wpPJ S851 29,8
Error in line 28: wpPJ S851 87,9
Error in line 31: jupIYqLanq6 S851 30,48
Error in line 30: wpPJ S30 90,2
Error in line 26: bbCe S140 85,0
Error in line 36: bbCe S851 6,5
Error in line 33: QBkKfj S30 80,1
Error in line 44: S30 S851 62,3
Error in line 56: wpPJ S851 79,8
Error in line 55: 3iMt S851 76,7
Error in line 61: QBkKfj S140 81,4
Error in line 62: QBkKfj S30 96,1
Error in line 65: 3iMt S30 32,8
Error in line 89: 3iMt S30 07,7
Error in line 86: wpPJ S140 60,2
Error in line 95: 3iMt S851 13,9
Error in line 88: Dzf4 S140 367,2
Error in line 105: Dzf4 S851 69,8
Error in line 115: Dzf4 S140 98,9
Error in line 120: jupIYqLanq6 S30 4,1
Error in line 123: 3iMt S30 236,9
Error in line 131: 3iMt S140 131,57
Error in line 128: 3iMt S140 99,0
Error in line 122: jupIYqLanq6 S851 5,4
Error in line 145: QBkKfj S140 51,4
Error in line 151: Dzf4 S851 80,5
Error in line 170: jupIYqLanq6 S851 68,20
Error in line 171: 3iMt S30 55,23
Error in line 174: 3iMt S30 63,4
Error in line 173: jupIYqLanq6 S851 138,0
Error in line 180: jupIYqLanq6 S140 45,2
Error in line 179: S30 S140 12,2
Error in line 182: S30 S851 20,7
Error in line 181: jupIYqLanq6 S30 62,0
Error in line 190: 3iMt S851 13,5
Error in line 199: QBkKfj S140 95,4
Error in line 200: QBkKfj S30 68,0
Error in line 213: QBkKfj S851 47,4
Error in line 230: bbCe S140 122,9
